baml_language/crates/baml_tests/snapshots/compiles/lexical_scoping/baml_tests__compiles__lexical_scoping__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 10745
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
