baml_language/crates/baml_tests/snapshots/compiles/lexical_scoping/baml_tests__compiles__lexical_scoping__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.branch_locals(b: bool) -> int {
    load_var b
    pop_jump_if_false L0
    jump L1

  L0:
    load_const 2
    jump L2

  L1:
    load_const 1

  L2:
    return
}

function user.capture_before_after_shadow() -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_var ?2
    make_cell
    store_var ?2
    load_const 1
    store_deref ?1
    load_const 2
    store_deref ?2
    load_var x
    load_const ?
    make_closure .<lambda(capture_before_after_shadow, 0)>
    call_indirect
    store_var _6
    load_var x
    load_const ?
    make_closure .<lambda(capture_before_after_shadow, 1)>
    call_indirect
    store_var _8
    load_var _6
    load_const 10
    bin_op *
    load_var _8
    bin_op +
    return
}

function user.declared_type_restored() -> string {
    load_const "outer"
    return
}

function user.for_loop_restores_outer() -> int {
    load_const 2
    load_const 3
    alloc_array 2
    store_var _2
    load_const 0
    store_var __for_idx

  L0:
    load_var __for_idx
    load_var _2
    call baml.Array.length
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_const 1
    return

  L2:
    load_var _2
    load_var __for_idx
    load_array_element
    store_var x
    load_var __for_idx
    load_const 1
    add_int
    store_var __for_idx
    jump L0
}

function user.initializer_uses_previous() -> int {
    load_const 1
    load_const 1
    bin_op +
    return
}

function user.nested_lambda_capture() -> int {
    load_var ?1
    make_cell
    store_var ?1
    load_const 7
    store_deref ?1
    load_var x
    load_const ?
    make_closure .<lambda(nested_lambda_capture, 0)>
    call_indirect
    return
}

function user.nested_outer_restored() -> int {
    load_const 2
    store_var x
    load_const 3
    store_var x
    load_const 1
    return
}

function user.outer_restored() -> int {
    load_const 1
    return
}

function user.same_scope_shadow() -> int {
    load_const 2
    return
}

function user.shadow_param(x: int) -> int {
    load_var x
    load_const 1
    bin_op +
    return
}

function user.watch_block_cleanup() -> int {
    load_const 1
    store_var x
    load_const "x"
    load_const null
    watch x
    load_const 2
    store_var x
    load_const "x"
    load_const null
    watch x
    unwatch x
    load_var x
    unwatch x
    return
}

function user.while_body_restores_outer() -> int {
    load_const true

  L0:
    pop_jump_if_false L1
    jump L2

  L1:
    load_const 1
    return

  L2:
    load_const false
    jump L0
}
